--- a/src/components/Admin/MenuList/MenuList.css
+++ b/src/components/Admin/MenuList/MenuList.css
@@ -49,7 +49,26 @@
     text-align: right;
 }
 
+.btn-edit {
+    display: inline-block;
+    background-color: #3498db;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-right: 1rem;
+    transition: background-color 0.2s;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btn-edit:hover {
+    background-color: #2980b9;
+}
+
 .btn-delete {
+    display: inline-block;
     background-color: #e74c3c;
     color: white;
     border: none;
@@ -57,6 +76,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.2s;
+    font-weight: bold;
 }
 
 .btn-delete:hover {
