--- a/src/components/Admin/ItemForm/ItemForm.css
+++ b/src/components/Admin/ItemForm/ItemForm.css
@@ -42,7 +42,7 @@
 .form-group select {
     width: 100%;
     padding: 0.8rem;
-    border: 1px solid #ccc;
+    border: 1px solid #DDDDDD;
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 1rem;
