--- a/src/components/Admin/MenuForm/MenuForm.css
+++ b/src/components/Admin/MenuForm/MenuForm.css
@@ -43,7 +43,7 @@
 .form-group select {
     width: 100%;
     padding: 0.8rem;
-    border: 1px solid #ccc;
+    border: 1px solid #DDDDDD;
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 1rem;
@@ -74,7 +74,7 @@
     flex-direction: column;
     gap: 0.5rem;
     padding: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid #DDDDDD;
     border-radius: 5px;
 }
 
