--- a/src/components/MenuReservation/MenuReservation.css
+++ b/src/components/MenuReservation/MenuReservation.css
@@ -1,5 +1,5 @@
 .menu-reservation {
-    padding: 20px;
+    padding: 80px 20px 20px;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -52,4 +52,16 @@
 
 .reserve-button:hover {
     background-color: #218838;
+}
+
+.title-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.back-arrow {
+    font-size: 2.5rem;
+    cursor: pointer;
+    color: #fd7e14;
 }
