--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,24 @@
+.user-info-header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.user-avatar.user-avatar-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: transparent;
+  margin-right: 0.5rem;
+  overflow: hidden;
+}
+.user-avatar.user-avatar-icon svg {
+  width: 32px;
+  height: 32px;
+  display: block;
+}
 
 .app-header {
   width: 100%;
